# MPSIMS

./: README.md  app.py  main.py  pyproject.toml  requirements.txt  utils.py
data/: MPSIMSAgriculturePlanYear25-26.xlsx  MPSIMSSchoolEducationPlanYear25-26.xlsx  MPSIMSSkillPlanYear25-26.xlsx  MPSIMSSocialJusticePlanYear25-26.xlsx  ~$MPSIMSSocialJusticePlanYear25-26.xlsx
