[project]
name = "mpsims"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4.2",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "plotly>=6.6.0",
    "plotly-resampler>=0.11.0",
    "prophet>=1.3.0",
    "reportlab>=4.4.10",
    "scikit-learn>=1.8.0",
    "streamlit>=1.55.0",
    "streamlit-chat>=0.1.1",
]
